# canvas-course-agent

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: ai_adapter.py  cli.py  config.py  config_cmd.py  course_label.py  courses.py  digest.py  discord_webhook.py  export_cmd.py  init_wizard.py  profile.py  remind.py  remind_custom.py  sync.py  sync_items.py  telegram_cmd.py  timeutil.py  upcoming.py
agent/providers/: canvas.py
agent/storage/: sqlite.py
deploy/: README.md
deploy/launchd/: com.canvas-course_agent.remind.plist  com.canvas-course_agent.sync.plist
deploy/systemd/: canvas-agent-digest-every7d.timer  canvas-agent-digest-weekly.timer  canvas-agent-digest.service  canvas-agent-remind.service  canvas-agent-remind.timer  canvas-agent-sync.service  canvas-agent-sync.timer
deploy/windows/: install-tasks.ps1
docs/: ARCHITECTURE.md
