[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-course-agent"
version = "0.0.1"
description = "Canvas LMS course importer + reminder agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "pydantic>=2.6",
  "rich>=13.7",
]

[project.scripts]
canvas-agent = "agent.cli:main"

[tool.setuptools]
# Flat-layout repo; only package the `agent` package.
packages = ["agent"]

[tool.ruff]
line-length = 100
